完善顶部导航条

--- a/a.css
+++ b/a.css
@@ -29,6 +29,16 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
     left: 0;
     width: 100%;
+    transition: all 0.5s;
+    color: #B1B1B1;
+}
+
+.topNavBar.sticky {
+    background: white;
+    padding: 0;
+    z-index: 1;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    color: #3d4451;
 }
 
 .topNavBar-inner {
@@ -51,10 +61,11 @@ h1, h2, h3, h4, h5, h6 {
     float: left;
     margin-left: 17px;
     margin-right: 17px;
+    position: relative;
 }
 
 .topNavBar nav>ul>li>a {
-    color: #B1B1B1;
+    color: inherit;
     font-size: 12px;
     font-weight: bold;
     border-top: 3px solid transparent;
@@ -63,10 +74,57 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
     padding-top: 5px;
     padding-bottom: 5px;
+    position: relative;
 }
 
-.topNavBar nav ul li a:hover {
-    border-bottom: 3px solid #e06567;
+.topNavBar nav ul li.active a::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #e6686a;
+    height: 3px;
+    animation: menuSlide 0.3s;
+}
+
+@keyframes menuSlide {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
+}
+
+.topNavBar .submenu {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 100%;
+    background: white;
+    color: #3d4451;
+    animation: submenuSlide 0.3s;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+@keyframes submenuSlide {
+    0% {
+        margin-right: 100%;
+    }
+    100% {
+        margin-right: 0;
+    }
+}
+
+.topNavBar li.active .submenu {
+    display: block;
+}
+
+.topNavBar .submenu>li {
+    white-space: nowrap;
+    padding: 5px 10px;
 }
 
 .logo {
