--- a/a.css
+++ b/a.css
@@ -23,6 +23,27 @@ h1, h2, h3, h4, h5, h6 {
     clear: both;
 }
 
+[data-x].active {
+    outline: 1px solid red;
+}
+
+[data-x].offset{
+    transform: translateY(150px);
+}
+[data-x]{
+    transform: translateY(0);
+    transition: all 0.5s;
+}
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(-30px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
 .topNavBar {
     padding: 15px 0 15px 0;
     position: fixed;
@@ -77,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 
-.topNavBar nav ul li.active a::after {
+.topNavBar nav ul li.active a::after, .topNavBar nav ul li.highlight a::after {
     content: '';
     display: block;
     position: absolute;
@@ -335,6 +356,7 @@ body>main .downloadResume:hover {
     background: #fae1e1;
     border-radius: 2px;
     margin: 4px 0 40px;
+    overflow: hidden;
 }
 
 .skills .progressBar .progress {
@@ -342,6 +364,11 @@ body>main .downloadResume:hover {
     width: 70%;
     background: #E6686A;
     border-radius: 2px;
+    transform: translateX(0);
+    transition: all 1s;
+}
+.skills.offset .progress{
+    transform: translateX(-100%);
 }
 
 .portfolio {
