--- a/a.css
+++ b/a.css
@@ -45,6 +45,14 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
+.icon {
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+
 .topNavBar {
     padding: 15px 0 15px 0;
     position: fixed;
@@ -386,14 +394,17 @@ body>main .downloadResume:hover {
     width: 700px;
     height: 525px;
 }
-.portfolio.swiper-button-prev{
+
+.portfolio.swiper-button-prev {
     right: 100%;
     left: auto;
 }
-.portfolio.swiper-button-next{
+
+.portfolio.swiper-button-next {
     left: 100%;
     right: auto;
 }
+
 .bar-inner {
     height: 100%;
     background: #e6686a;
